--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@
 .idea
 .ipynb_checkpoints
 __pycache__
+ProjectFood/evaluate_models/user_knn/cmake-build-debug/*
+ProjectFood/evaluate_models/user_knn/cmake-build-release
